k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: social-network
  labels:
    name: social-network
    app: social-network-webinars
