k8s-manifests/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: social-network
  labels:
    app: social-network-webinars
    component: auth
spec:
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: social-network-webinars
    component: auth
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: social-network
  labels:
    app: social-network-webinars
    component: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-network-webinars
      component: auth
  template:
    metadata:
      labels:
        app: social-network-webinars
        component: auth
    spec:
      containers:
        - name: auth
          image: evo-social-network-sedg1l.cr.cloud.ru/social-network-auth:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "2Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3011
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3011
            initialDelaySeconds: 5
            periodSeconds: 5
