k8s-manifests/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: social-network
  labels:
    app: social-network-webinars
    component: frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: social-network-webinars
    component: frontend
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: social-network
  labels:
    app: social-network-webinars
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: social-network-webinars
      component: frontend
  template:
    metadata:
      labels:
        app: social-network-webinars
        component: frontend
    spec:
      containers:
        - name: frontend
          image: evo-social-network-sedg1l.cr.cloud.ru/social-network-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 30
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 3000
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
