k8s-manifests/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: social-network
  labels:
    app: social-network-webinars
    component: user
spec:
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
      name: http
  selector:
    app: social-network-webinars
    component: user
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: social-network
  labels:
    app: social-network-webinars
    component: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-network-webinars
      component: user
  template:
    metadata:
      labels:
        app: social-network-webinars
        component: user
    spec:
      containers:
        - name: user
          image: evo-social-network-sedg1l.cr.cloud.ru/social-network-user:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
              name: http
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "1Gi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3013
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3013
            initialDelaySeconds: 5
            periodSeconds: 5
